syntax = "proto3";
package connections;
import "base.proto";
import "user.proto";
import "connection.proto";

service ConnectionService {
  rpc getById(Id) returns (GetOneResponse) {}
  rpc getList(QueryConnection) returns (GetListResponse) {}
  rpc acceptConnection(Id) returns (GetOneResponse) {}
  rpc create(Connection) returns (GetOneResponse) {}
  rpc update(Connection) returns (GetOneResponse) {}
  rpc delete(Id) returns (DeleteResponse) {}
}
message Connection {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 followingId = 7;
  optional int32 followerId = 8;
  optional User follower = 9;
  optional User following = 10;
}

message QueryConnection {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 page = 7;
  optional int32 limit = 8;
  optional string sortBy = 9;
  optional string sortOrder = 10;
  optional int32 followingId = 11;
  optional int32 followerId = 12;
}

message GetListResponse {
  string message = 1;
  optional int32 totalItems = 2;
  optional int32 perPage = 3;
  optional int32 totalPages = 4;
  optional int32 page = 5;
  repeated Connection data = 6;
}

message GetOneResponse {
  string message = 1;
  optional Connection data = 2;
}

